Hack hach hack.
* Cap task for installing Gem dependencies.
* Tweak Cap task for setting up Apache.
* More robust virtual host config.
* Root URL for shits and grins.

--- a/config/tagbetter.conf
+++ b/config/tagbetter.conf
@@ -1,6 +1,11 @@
 <VirtualHost *:80>
-  ServerName tagbetter.r09.railsrumble.com/
+  ServerName tagbetter.r09.railsrumble.com
   DocumentRoot /apps/tagbetter/current/public
+  
+  ErrorLog /var/log/apache2/tagbetter_error.log
+  LogLevel warn
+  
+  CustomLog /var/log/apache2/tagbetter.log combined
   
   RackEnv production
 </VirtualHost>
